# typer_intro

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  novel_package.py  novel_package_v2.py  processor.py  scrapy.cfg  translate.py  typer_func.py  typer_func_old.py  typer_intro.py  utils_translate.py
src/syosetu_spider/: items.py  middlewares.py  pipelines.py  settings.py
src/syosetu_spider/spiders/: nocturne_spider.py  syosetu_spider.py
tests/: test_syosetu_spider.py
tests/test_data/: ncode_chapter_page_1.html  ncode_chapter_page_2.html  ncode_main_page.html  ncode_main_page_2.html
