[project]
name = "webnovel-unpacker"
version = "0.1.0"
description = "A tool for unpacking web novel JSONL files into text format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "googletrans>=4.0.2",
    "jsonlines>=4.0.0",
    "pytest>=8.4.1",
    "scrapy>=2.12.0",
    "selenium>=4.31.0",
    "typer>=0.15.2",
]
